<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dafer.android.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:id="@+id/quizGroup"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/q1_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:layout_alignParentTop="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:id="@+id/q1_quiz"
            android:layout_below="@id/q1_textview">

            <RadioButton
                android:id="@+id/q1_radioA"
                android:text="@string/q1_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"/>

            <RadioButton
                android:id="@+id/q1_radioB"
                android:text="@string/q1_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"/>

            <RadioButton
                android:id="@+id/q1_radioC"
                android:text="@string/q1_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"/>

        </RadioGroup>

        <TextView
            android:id="@+id/q2_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:layout_below="@id/q1_quiz"/>

        <CheckBox
            android:id="@+id/q2_checkbox1"
            android:text="@string/q2_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q2_textview"/>

        <CheckBox
            android:id="@+id/q2_checkbox2"
            android:text="@string/q2_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q2_checkbox1"/>

        <CheckBox
            android:id="@+id/q2_checkbox3"
            android:text="@string/q2_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q2_checkbox2"/>

        <CheckBox
            android:id="@+id/q2_checkbox4"
            android:text="@string/q2_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q2_checkbox3"/>

        <TextView
            android:id="@+id/q3_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:layout_below="@id/q2_checkbox4"/>

        <RadioGroup
            android:id="@+id/q3_checkboxes"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q3_textview">

            <RadioButton
                android:id="@+id/q3_radioA"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

            <RadioButton
                android:id="@+id/q3_radioB"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

        </RadioGroup>

        <TextView
            android:id="@+id/q4_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:layout_below="@id/q3_checkboxes"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q4_textview"
            android:id="@+id/q4_edit_text"
            android:paddingTop="10dp"
            android:inputType="text">
         </EditText>

        <TextView
            android:id="@+id/q5_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/q4_edit_text"
            android:paddingTop="10dp"
            android:text="@string/q5" />

        <EditText
            android:id="@+id/q5_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q5_textview"
            android:paddingTop="10dp"
            android:inputType="text">
        </EditText>

        <TextView
            android:layout_below="@id/q5_edit_text"
            android:id="@+id/q6_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6" />

        <RadioGroup
            android:id="@+id/q6_radioboxes"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q6_textview">

            <RadioButton
                android:id="@+id/q6_radioA"
                android:text="@string/q6_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

            <RadioButton
                android:id="@+id/q6_radioB"
                android:text="@string/q6_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

            <RadioButton
                android:id="@+id/q6_radioC"
                android:text="@string/q6_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

        </RadioGroup>

        <TextView
            android:id="@+id/q7_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7"
            android:layout_below="@id/q6_radioboxes"/>

        <RadioGroup
            android:id="@+id/q7_radioboxes"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q7_textview">

            <RadioButton
                android:id="@+id/q7_radioA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/q7_a"/>

            <RadioButton
                android:id="@+id/q7_radioB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/q7_b"/>

            <RadioButton
                android:id="@+id/q7_radioC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/q7_c" />

        </RadioGroup>

        <TextView
            android:id="@+id/q8_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q8"
            android:layout_below="@id/q7_radioboxes"/>

        <EditText
            android:id="@+id/q8_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q8_textview"
            android:paddingTop="10dp"
            android:hint="@string/q8_hint"
            android:inputType="text">
        </EditText>

        <TextView
            android:id="@+id/q9_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q9"
            android:layout_below="@id/q8_edit_text"/>

        <EditText
            android:id="@+id/q9_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q9_textview"
            android:paddingTop="10dp"
            android:inputType="text">
        </EditText>

        <TextView
            android:id="@+id/q10_textview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q10"
            android:layout_below="@id/q9_edit_text"/>

        <CheckBox
            android:id="@+id/q10_checkbox1"
            android:text="@string/q10_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q10_textview"/>

        <CheckBox
            android:id="@+id/q10_checkbox2"
            android:text="@string/q10_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q10_checkbox1"/>

        <CheckBox
            android:id="@+id/q10_checkbox3"
            android:text="@string/q10_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q10_checkbox2"/>

        <CheckBox
            android:id="@+id/q10_checkbox4"
            android:text="@string/q10_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/q10_checkbox3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_below="@id/q10_checkbox4"
            android:text="@string/submit_quiz"
            android:onClick="submitQuiz"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</ScrollView>
